[project]
name = "lusstr"
version = "0.11"
description = "lusSTR: tool to translate forensic STR sequences into interpretable formats"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rebecca Mitchell", email = "rebecca.mitchell@st.dhs.gov"},
    {name = "Daniel Standage", email = "daniel.standage@st.dhs.gov"}
]
dependencies = [
    "matplotlib>=3.8",
    "numpy==1.26.4",
    "openpyxl>=3.0.6",
    "pandas>=1.0,<2.0",
    "plotly==5.24.1",
    "pyyaml>=6.0",
    "snakemake>=7.22,<8.0",
    "streamlit>=1.31.0",
    "streamlit_option_menu>=0.3.12",
]

[project.optional-dependencies]
dev = [
    "black==24.10",
    "build",
    "snakefmt==0.10",
]
test = [
    "pytest",
    "pytest-cov",
]


[project.scripts]
lusstr = "lusSTR.cli:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
script-files = [
    "lusSTR/scripts/file_selector.py",
    "lusSTR/scripts/filter_settings.py",
    "lusSTR/scripts/folder_selector.py",
    "lusSTR/scripts/marker.py",
    "lusSTR/scripts/repeat.py"
]


